--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/stompjs": "^2.3.4",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.14.0",
     "babel-eslint": "^10.1.0",
@@ -21,6 +23,9 @@
     "vite": "^2.3.3"
   },
   "dependencies": {
-    "auto-bind": "^4.0.0"
+    "@stomp/stompjs": "^6.1.0",
+    "auto-bind": "^4.0.0",
+    "sockjs-client": "^1.5.1",
+    "uuid": "^8.3.2"
   }
 }
