Add creating games rather than typing in a random id

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   datasource:
-    jdbc-url: jdbc:postgresql://localhost:5432/onevoneio
+    jdbc-url: jdbc:postgresql://localhost:5432/raghavio
     username: ${POSTGRES_USERNAME}
     password: ${POSTGRES_PASSWORD}
     pool-size: 30
